# qiskit

./: Cargo.toml  build_for_pyodide.sh  pyproject.toml  requirements.txt
crates/accelerate/: Cargo.toml
crates/accelerate/src/: barrier_before_final_measurement.rs  dense_layout.rs  lib.rs  pauli_exp_val.rs  sparse_pauli_op.rs  vf2_layout.rs
crates/accelerate/src/circuit_library/: quantum_volume.rs
crates/accelerate/src/results/: marginalization.rs
crates/accelerate/src/sabre/: layout.rs  neighbor_table.rs  route.rs
crates/accelerate/src/synthesis/linear/: utils.rs
crates/circuit/: Cargo.toml
crates/circuit/src/: circuit_data.rs  lib.rs  rustworkx_core_vnext.rs
crates/qasm2/: Cargo.toml
crates/qasm3/: Cargo.toml
crates/quantum_info/: Cargo.toml
crates/quantum_info/src/: lib.rs  sparse_pauli_op.rs
crates/quantum_info/src/pauli_lindblad_map/: pauli_lindblad_map_class.rs
crates/synthesis/: Cargo.toml
crates/transpiler/: Cargo.toml
crates/transpiler/src/passes/: barrier_before_final_measurement.rs  dense_layout.rs  disjoint_layout.rs
crates/transpiler/src/passes/sabre/: layout.rs  neighbor_table.rs  route.rs
crates/transpiler/src/passes/vf2/: vf2_layout.rs
qiskit/: user_config.py
qiskit/circuit/: parameter.py  parameterexpression.py  quantumcircuit.py
qiskit/circuit/tools/: pi_check.py
qiskit/passmanager/: passmanager.py
qiskit/primitives/: primitive_job.py
qiskit/qpy/: common.py  interface.py
qiskit/qpy/binary_io/: schedules.py  value.py
qiskit/transpiler/passes/layout/: vf2_utils.py
qiskit/transpiler/passes/optimization/template_matching/: template_substitution.py
qiskit/transpiler/preset_passmanagers/: builtin_plugins.py
qiskit/utils/: __init__.py  optionals.py  parallel.py
test/python/circuit/: test_circuit_load_from_qpy.py  test_parameters.py
test/python/compiler/: test_transpiler.py
test/python/qpy/: test_circuit_load_from_qpy.py
test/qpy_compat/: qpy_test_constraints.txt  run_tests.sh  test_qpy.py
tools/: find_stray_release_notes.py  verify_headers.py  verify_images.py
