[package]
name = "qiskit-accelerate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_accelerate"
doctest = false

[lints]
workspace = true

[dependencies]
numpy.workspace = true
rand = "0.9"
rand_pcg = "0.9"
rand_distr = "0.5"
ahash.workspace = true
num-traits = "0.2"
num-complex.workspace = true
rustworkx-core.workspace = true
num-bigint.workspace = true
faer = { version = "0.19.4", default-features = false, features = ["std"] }
itertools.workspace = true
qiskit-circuit.workspace = true
thiserror.workspace = true
ndarray-einsum = "0.8.0"
rustiq-core = "0.0.11"
bytemuck.workspace = true
nalgebra.workspace = true

[dependencies.smallvec]
workspace = true
features = ["union"]

[dependencies.pyo3]
workspace = true
features = ["hashbrown", "indexmap", "num-complex", "num-bigint", "smallvec"]

[dependencies.ndarray]
workspace = true
default-features = false
features = ["std", "approx"]

[dependencies.approx]
workspace = true
features = ["num-complex"]

[dependencies.hashbrown]
workspace = true
default-features = false

[dependencies.indexmap]
workspace = true
default-features = false 

[dependencies.faer-ext]
version = "0.3.0"
features = ["ndarray"]

[dependencies.pulp]
version = "0.21.4"
features = ["macro"]

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }

[features]
cache_pygates = ["qiskit-circuit/cache_pygates"]
