[package]
name = "qiskit-qasm3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_qasm3"
doctest = false

[lints]
workspace = true


[dependencies]
indexmap.workspace = true
oq3_semantics = "0.7.0"
ahash.workspace = true

[dependencies.hashbrown]
workspace = true
default-features = false

[dependencies.pyo3]
workspace = true
features = ["py-clone"]
