[package]
name = "qiskit-transpiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_transpiler"
doctest = false

[lints]
workspace = true

[dependencies]
numpy.workspace = true
ahash.workspace = true
itertools.workspace = true
nalgebra.workspace = true
rand.workspace = true
rand_pcg.workspace = true
num-complex.workspace = true
rustworkx-core.workspace = true
qiskit-circuit.workspace = true
qiskit-synthesis.workspace = true
qiskit-quantum-info.workspace = true
thiserror.workspace = true

[dependencies.uuid]
workspace = true
features = ["v4", "fast-rng"]

[dependencies.smallvec]
workspace = true
features = ["union"]

[dependencies.pyo3]
workspace = true
features = ["hashbrown", "indexmap", "num-complex", "num-bigint", "smallvec"]

[dependencies.ndarray]
workspace = true
features = ["approx"]
default-features = false

[dependencies.approx]
workspace = true
features = ["num-complex"]

[dependencies.hashbrown]
workspace = true
default-features = false

[dependencies.indexmap]
workspace = true
default-features = false

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }

[features]
cache_pygates = ["qiskit-circuit/cache_pygates"]
